--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -1,3 +1,4 @@
+<header ng-include="'templates/nav.html'"></header>
 <h1>{{title}}</h1>
 <ul>
   <li ng-repeat="thing in items">{{thing.name}}: {{thing.age}}</li>
