--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,3 +1,4 @@
+<header ng-include="'templates/nav.html'"></header>
 <h1>{{title}}</h1>
 <ul>
   <li ng-class="{'special': friend.isSpecial}" ng-repeat="friend in friends">
@@ -8,6 +9,6 @@
 </ul>
 
 
-<button ng-click="save()" class="btn btn-primary">Save</button>
+<!--<button ng-click="save()" class="btn btn-primary">Save</button>-->
 
 <contact-card></contact-card>
