--- a/public/templates/iphone.html
+++ b/public/templates/iphone.html
@@ -1,6 +1,15 @@
 <ul class="nav nav-pills">
+  <li ui-sref-active="active"><a href="#/iphone">Назад</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/3">iPhone 3gs</a></li>
   <li ui-sref-active="active"><a href="#/iphone/4">iPhone 4</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/4s">iPhone 4s</a></li>
   <li ui-sref-active="active"><a href="#/iphone/5">iPhone 5</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/5s">iPhone 5s</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/5c">iPhone 5c</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/6">iPhone 6</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/6plus">iPhone 6 Plus</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/6s">iPhone 6s</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/6splus">iPhone 6s Plus</a></li>
 </ul>
 
 <h1>{{title}}</h1>
@@ -9,10 +18,10 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Название</th>
-      <th>Цена</th>
-      <th>Описание</th>
-      <th>Действие</th>
+      <th class="td__name">Название</th>
+      <th class="td__price">Цена</th>
+      <th class="td__description">Описание</th>
+      <th class="td__action">Действие</th>
     </tr>
   </thead>
   <tbody>
@@ -30,8 +39,6 @@
       </td>
       <td class="td__action">
         <button class="btn btn-success" ng-click="add(list)">Добавить <i class="glyphicon glyphicon-plus"></i></button>
-
-        <!--<button class="btn btn-primary" ng-click="update()">Update</button>-->
       </td>
     </tr>
   </tbody>
@@ -40,13 +47,13 @@
 
   <tbody>
 
-  <tr ng-repeat="item in priceList" sv-element sv-on-sort="bar($item, $partFrom, $partTo, $indexFrom, $indexTo)">
+  <tr ng-repeat="item in priceList" sv-element>
+
     <td class="td__name">
-      <p><input ng-show="item.shown" class="form-control" value="{{item.name}}" ng-model="item.name" type="text"
+      <p ng-show="item.shown"><input class="form-control" value="{{item.name}}" ng-model="item.name" type="text"
                 placeholder="Название услуги"></p>
-      <p><input ng-show="item.shown" class="form-control" value="{{item.url}}" ng-model="item.url" type="text"
-                placeholder="Ссылка">
-      </p>
+      <div ng-show="item.shown"><input  class="form-control" value="{{item.url}}" ng-model="item.url" type="text" placeholder="Ссылка на страницу">
+      </div>
       <div ng-show="!item.shown">
         <div ng-if="item.url">
           <a href="{{item.url}}">
@@ -73,14 +80,13 @@
 
     </td>
     <td class="td__action">
-      <p>
-        <button ng-hide="item.shown" class="btn btn-warning glyphicon glyphicon-pencil" ng-click="edit(item); item.shown = !item.shown"></button>
-        <button ng-hide="item.shown" class="btn btn-danger glyphicon glyphicon-minus" ng-click="remove(item._id)"><i
+        <button ng-hide="item.shown" class="btn btn-xs btn-warning glyphicon glyphicon-pencil" ng-click="edit(item); item.shown = !item.shown"></button>
+        <button ng-hide="item.shown" class="btn btn-xs btn-danger glyphicon glyphicon-minus" ng-click="remove(item._id)"><i
                 class=""></i></button>
-        <button ng-hide="!item.shown" class="btn btn-success js-btn-update glyphicon glyphicon-ok"
+        <button ng-hide="!item.shown" class="btn btn-xs btn-success js-btn-update glyphicon glyphicon-ok"
                 ng-click="update(item); item.shown = !item.shown"></button>
-        <button ng-hide="!item.shown" class="btn btn-danger glyphicon glyphicon-remove" ng-click="editOnCancel(item); item.shown = !item.shown"></button>
-      </p>
+        <button ng-hide="!item.shown" class="btn btn-xs btn-danger glyphicon glyphicon-remove" ng-click="editOnCancel(item); item.shown = !item.shown"></button>
+        <button sv-handle class="btn btn-xs btn-warning glyphicon glyphicon-resize-vertical"></button>
     </td>
   </tr>
   </tbody>
