add confirm msg for deleting, and update icon

--- a/public/templates/iphone.html
+++ b/public/templates/iphone.html
@@ -81,7 +81,7 @@
     </td>
     <td class="td__action">
         <button ng-hide="item.shown" class="btn btn-xs btn-warning glyphicon glyphicon-pencil" ng-click="edit(item); item.shown = !item.shown"></button>
-        <button ng-hide="item.shown" class="btn btn-xs btn-danger glyphicon glyphicon-minus" ng-click="remove(item._id)"><i
+        <button ng-hide="item.shown" class="btn btn-xs btn-danger glyphicon glyphicon-trash" ng-click="remove(item._id)"><i
                 class=""></i></button>
         <button ng-hide="!item.shown" class="btn btn-xs btn-success js-btn-update glyphicon glyphicon-ok"
                 ng-click="update(item); item.shown = !item.shown"></button>
