add ipad and imac

--- a/public/templates/nav.html
+++ b/public/templates/nav.html
@@ -2,4 +2,6 @@
   <li ui-sref-active="active"><a ui-sref="home">Home</a></li>
   <li ui-sref-active="active"><a ui-sref="about">About</a></li>
   <li ui-sref-active="active"><a ui-sref="iphone">iPhone</a></li>
+  <li ui-sref-active="active"><a ui-sref="ipad">iPad</a></li>
+  <li ui-sref-active="active"><a ui-sref="macbook">Macbook</a></li>
 </ul>
