update pro retina

--- a/public/templates/macbook-nav.html
+++ b/public/templates/macbook-nav.html
@@ -2,6 +2,7 @@
 <ul class="nav nav-pills">
   <li ui-sref-active="active"><a href="#/macbook/macbook">MacBook</a></li>
   <li ui-sref-active="active"><a href="#/macbook/pro">MacBook Pro</a></li>
+  <li ui-sref-active="active"><a href="#/macbook/proretina">MacBook Pro Retina</a></li>
   <li ui-sref-active="active"><a href="#/macbook/air">MacBook Air</a></li>
 
 </ul>
