create several sections for macbooks

--- a/public/templates/nav.html
+++ b/public/templates/nav.html
@@ -3,5 +3,9 @@
   <li ui-sref-active="active"><a ui-sref="about">About</a></li>
   <li ui-sref-active="active"><a ui-sref="iphone">iPhone</a></li>
   <li ui-sref-active="active"><a ui-sref="ipad">iPad</a></li>
-  <li ui-sref-active="active"><a ui-sref="macbook">Macbook</a></li>
+  <!--<li ui-sref-active="active"><a ui-sref="macbook">Macbook</a></li>-->
+  <li ui-sref-active="active"><a ui-sref="macbook-pro">Macbook Pro</a></li>
+  <li ui-sref-active="active"><a ui-sref="macbook-air">Macbook Air</a></li>
+  <li ui-sref-active="active"><a ui-sref="imac">iMac</a></li>
+  <li ui-sref-active="active"><a ui-sref="macbook-simple">Macbook simple</a></li>
 </ul>
