add iphone 7 7+, se

--- a/public/templates/iphone-nav.html
+++ b/public/templates/iphone-nav.html
@@ -10,4 +10,7 @@
   <li ui-sref-active="active"><a href="#/iphone/6 Plus">iPhone 6 Plus</a></li>
   <li ui-sref-active="active"><a href="#/iphone/6s">iPhone 6s</a></li>
   <li ui-sref-active="active"><a href="#/iphone/6s Plus">iPhone 6s Plus</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/se">iPhone SE</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/7">iPhone 7</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/7 Plus">iPhone 7 Plus</a></li>
 </ul>
