--- a/public/templates/iphone.html
+++ b/public/templates/iphone.html
@@ -10,6 +10,9 @@
   <li ui-sref-active="active"><a href="#/iphone/6plus">iPhone 6 Plus</a></li>
   <li ui-sref-active="active"><a href="#/iphone/6s">iPhone 6s</a></li>
   <li ui-sref-active="active"><a href="#/iphone/6splus">iPhone 6s Plus</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/se">iPhone SE</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/7">iPhone 7</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/7splus">iPhone 7 Plus</a></li>
 </ul>
 
 <h1>{{title}}</h1>
