--- a/public/templates/iphone.html
+++ b/public/templates/iphone.html
@@ -12,7 +12,7 @@
   <li ui-sref-active="active"><a href="#/iphone/6splus">iPhone 6s Plus</a></li>
   <li ui-sref-active="active"><a href="#/iphone/se">iPhone SE</a></li>
   <li ui-sref-active="active"><a href="#/iphone/7">iPhone 7</a></li>
-  <li ui-sref-active="active"><a href="#/iphone/7splus">iPhone 7 Plus</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/7plus">iPhone 7 Plus</a></li>
 </ul>
 
 <h1>{{title}}</h1>
