--- a/public/templates/iphone-nav.html
+++ b/public/templates/iphone-nav.html
@@ -7,10 +7,10 @@
   <li ui-sref-active="active"><a href="#/iphone/5s">iPhone 5s</a></li>
   <li ui-sref-active="active"><a href="#/iphone/5c">iPhone 5c</a></li>
   <li ui-sref-active="active"><a href="#/iphone/6">iPhone 6</a></li>
-  <li ui-sref-active="active"><a href="#/iphone/6 Plus">iPhone 6 Plus</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/6plus">iPhone 6 Plus</a></li>
   <li ui-sref-active="active"><a href="#/iphone/6s">iPhone 6s</a></li>
-  <li ui-sref-active="active"><a href="#/iphone/6s Plus">iPhone 6s Plus</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/6splus">iPhone 6s Plus</a></li>
   <li ui-sref-active="active"><a href="#/iphone/se">iPhone SE</a></li>
   <li ui-sref-active="active"><a href="#/iphone/7">iPhone 7</a></li>
-  <li ui-sref-active="active"><a href="#/iphone/7 Plus">iPhone 7 Plus</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/7plus">iPhone 7 Plus</a></li>
 </ul>
