--- a/public/templates/ipad-nav.html
+++ b/public/templates/ipad-nav.html
@@ -5,7 +5,10 @@
   <li ui-sref-active="active"><a href="#/ipad/4">ipad 4</a></li>
   <li ui-sref-active="active"><a href="#/ipad/mini">ipad Mini</a></li>
   <li ui-sref-active="active"><a href="#/ipad/mini2">ipad Mini 2</a></li>
-  <li ui-sref-active="active"><a href="#/ipad/mini3">ipad Mini 3c</a></li>
+  <li ui-sref-active="active"><a href="#/ipad/mini3">ipad Mini 3</a></li>
   <li ui-sref-active="active"><a href="#/ipad/air">ipad Air</a></li>
   <li ui-sref-active="active"><a href="#/ipad/air2">ipad Air 2</a></li>
+  <li ui-sref-active="active"><a href="#/ipad/mini4">ipad Mini 4</a></li>
+  <li ui-sref-active="active"><a href="#/ipad/ipadpro129">ipad Pro 12,9”</a></li>
+  <li ui-sref-active="active"><a href="#/ipad/ipadpro97">ipad Pro 9,7”</a></li>
 </ul>
