--- a/public/templates/macbook-pro-retina.html
+++ b/public/templates/macbook-pro-retina.html
@@ -1,7 +1,8 @@
 <ul class="nav nav-pills">
-  <li ui-sref-active="active"><a href="#/macbook-pro">Назад</a></li>
-  <li ui-sref-active="active"><a href="#/macbook-pro/a1278">A1278</a></li>
-  <li ui-sref-active="active"><a href="#/macbook-pro/a1286">A1286</a></li>
+  <li ui-sref-active="active"><a href="#/macbook-pro-retina">Назад</a></li>
+  <li ui-sref-active="active"><a href="#/macbook-pro-retina/a1398">A1398</a></li>
+  <li ui-sref-active="active"><a href="#/macbook-pro-retina/a1425">A1425</a></li>
+  <li ui-sref-active="active"><a href="#/macbook-pro-retina/a1502">A1502</a></li>
 </ul>
 
 <h1>{{title}}</h1>
