--- a/public/templates/nav.html
+++ b/public/templates/nav.html
@@ -5,6 +5,7 @@
   <li ui-sref-active="active"><a ui-sref="ipad">iPad</a></li>
   <!--<li ui-sref-active="active"><a ui-sref="macbook">Macbook</a></li>-->
   <li ui-sref-active="active"><a ui-sref="macbook-pro">Macbook Pro</a></li>
+  <li ui-sref-active="active"><a ui-sref="macbook-pro-retina">Macbook Pro Retina</a></li>
   <li ui-sref-active="active"><a ui-sref="macbook-air">Macbook Air</a></li>
   <li ui-sref-active="active"><a ui-sref="imac">iMac</a></li>
   <li ui-sref-active="active"><a ui-sref="macbook-simple">Macbook simple</a></li>
