--- a/public/templates/ipad.html
+++ b/public/templates/ipad.html
@@ -8,6 +8,9 @@
   <li ui-sref-active="active"><a href="#/ipad/mini3">ipad Mini 3c</a></li>
   <li ui-sref-active="active"><a href="#/ipad/air">ipad Air</a></li>
   <li ui-sref-active="active"><a href="#/ipad/air2">ipad Air 2</a></li>
+  <li ui-sref-active="active"><a href="#/ipad/mini4">ipad Mini 4</a></li>
+  <li ui-sref-active="active"><a href="#/ipad/ipadpro129">ipad Pro 12,9”</a></li>
+  <li ui-sref-active="active"><a href="#/ipad/ipadpro97">ipad Pro 9,7”</a></li>
 </ul>
 
 <h1>{{title}}</h1>
