--- a/public/templates/iphone.html
+++ b/public/templates/iphone.html
@@ -15,6 +15,9 @@
   <li ui-sref-active="active"><a href="#/iphone/7plus">iPhone 7 Plus</a></li>
   <li ui-sref-active="active"><a href="#/iphone/7s">iPhone 7 Plus</a></li>
   <li ui-sref-active="active"><a href="#/iphone/7splus">iPhone 7s Plus</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/8">iPhone 8</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/8splus">iPhone 8 Plus</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/10">iPhone 10</a></li>
 </ul>
 
 <h1>{{title}}</h1>
