--- a/public/templates/iphone-nav.html
+++ b/public/templates/iphone-nav.html
@@ -14,6 +14,6 @@
   <li ui-sref-active="active"><a href="#/iphone/7">iPhone 7</a></li>
   <li ui-sref-active="active"><a href="#/iphone/7plus">iPhone 7 Plus</a></li>
   <li ui-sref-active="active"><a href="#/iphone/8">iPhone 8</a></li>
-  <li ui-sref-active="active"><a href="#/iphone/8splus">iPhone 8 Plus</a></li>
+  <li ui-sref-active="active"><a href="#/iphone/8plus">iPhone 8 Plus</a></li>
   <li ui-sref-active="active"><a href="#/iphone/10">iPhone 10</a></li>
 </ul>
