update navigation and add watch section

--- a/public/templates/ipad.html
+++ b/public/templates/ipad.html
@@ -11,6 +11,8 @@
   <li ui-sref-active="active"><a href="#/ipad/mini4">ipad Mini 4</a></li>
   <li ui-sref-active="active"><a href="#/ipad/ipadpro129">ipad Pro 12,9”</a></li>
   <li ui-sref-active="active"><a href="#/ipad/ipadpro97">ipad Pro 9,7”</a></li>
+  <li ui-sref-active="active"><a href="#/ipad/ipadnew2017">ipad new 2017”</a></li>
+  <li ui-sref-active="active"><a href="#/ipad/ipadpro105">ipad 10,5 ”</a></li>
 </ul>
 
 <h1>{{title}}</h1>
