--- a/public/templates/watch.html
+++ b/public/templates/watch.html
@@ -1,12 +1,11 @@
 <ul class="nav nav-pills">
-  <li ui-sref-active="active"><a href="#/macbook-pro-retina">Назад</a></li>
-  <li ui-sref-active="active"><a href="#/macbook-pro-retina/a1398">A1398</a></li>
-  <li ui-sref-active="active"><a href="#/macbook-pro-retina/a1425">A1425</a></li>
-  <li ui-sref-active="active"><a href="#/macbook-pro-retina/a1502">A1502</a></li>
-  <li ui-sref-active="active"><a href="#/macbook-pro/a1706">A1706</a></li>
-  <li ui-sref-active="active"><a href="#/macbook-pro/a1707">A1707</a></li>
-  <li ui-sref-active="active"><a href="#/macbook-pro/a1708">A1708</a></li>
-  <li ui-sref-active="active"><a href="#/macbook-pro/a1534">A1534</a></li>
+  <li ui-sref-active="active"><a href="#/watch">Назад</a></li>
+  <li ui-sref-active="active"><a href="#/watch/watch38">watch38</a></li>
+  <li ui-sref-active="active"><a href="#/watch/watch42">watch42</a></li>
+  <li ui-sref-active="active"><a href="#/watch/watch238">watch238</a></li>
+  <li ui-sref-active="active"><a href="#/watch/watch242">watch242</a></li>
+  <li ui-sref-active="active"><a href="#/watch/watch338">watch338</a></li>
+  <li ui-sref-active="active"><a href="#/watch/watch342">watch342</a></li>
 </ul>
 
 <h1>{{title}}</h1>
