--- a/public/templates/watch-nav.html
+++ b/public/templates/watch-nav.html
@@ -1,9 +1,9 @@
 <header ng-include="'templates/nav.html'"></header>
 <ul class="nav nav-pills">
-  <li ui-sref-active="active"><a href="#/watch/watch38">watch38</a></li>
-  <li ui-sref-active="active"><a href="#/watch/watch42">watch42</a></li>
-  <li ui-sref-active="active"><a href="#/watch/watch238">watch238</a></li>
-  <li ui-sref-active="active"><a href="#/watch/watch242">watch242</a></li>
-  <li ui-sref-active="active"><a href="#/watch/watch338">watch338</a></li>
-  <li ui-sref-active="active"><a href="#/watch/watch342">watch342</a></li>
+  <li ui-sref-active="active"><a href="#/watch/38">watch38</a></li>
+  <li ui-sref-active="active"><a href="#/watch/42">watch42</a></li>
+  <li ui-sref-active="active"><a href="#/watch/238">watch238</a></li>
+  <li ui-sref-active="active"><a href="#/watch/242">watch242</a></li>
+  <li ui-sref-active="active"><a href="#/watch/338">watch338</a></li>
+  <li ui-sref-active="active"><a href="#/watch/342">watch342</a></li>
 </ul>
