--- a/public/templates/macbook-nav.html
+++ b/public/templates/macbook-nav.html
@@ -1,8 +1,4 @@
 <header ng-include="'templates/nav.html'"></header>
 <ul class="nav nav-pills">
-  <li ui-sref-active="active"><a href="#/macbook/macbook">MacBook</a></li>
-  <li ui-sref-active="active"><a href="#/macbook/pro">MacBook Pro</a></li>
-  <li ui-sref-active="active"><a href="#/macbook/proretina">MacBook Pro Retina</a></li>
-  <li ui-sref-active="active"><a href="#/macbook/air">MacBook Air</a></li>
-
+  <li ui-sref-active="active"><a href="#/macbook/a1534">A1534</a></li>
 </ul>
