--- a/public/templates/macbook.html
+++ b/public/templates/macbook.html
@@ -1,9 +1,6 @@
 <ul class="nav nav-pills">
-  <li ui-sref-active="active"><a href="#/macbook">Назад</a></li>
-  <li ui-sref-active="active"><a href="#/macbook/macbook">MacBook</a></li>
-  <li ui-sref-active="active"><a href="#/macbook/pro">MacBook Pro</a></li>
-  <li ui-sref-active="active"><a href="#/macbook/proretina">MacBook Pro Retina</a></li>
-  <li ui-sref-active="active"><a href="#/macbook/air">MacBook Air</a></li>
+  <li ui-sref-active="active"><a href="#/macbook-pro-retina">Назад</a></li>
+  <li ui-sref-active="active"><a href="#/macbook/a1534">A1534</a></li>
 </ul>
 
 <h1>{{title}}</h1>
