--- a/public/templates/iwatch.html
+++ b/public/templates/iwatch.html
@@ -1,11 +1,11 @@
 <ul class="nav nav-pills">
-  <li ui-sref-active="active"><a href="#/watch">Назад</a></li>
-  <li ui-sref-active="active"><a href="#/watch/38">watch38</a></li>
-  <li ui-sref-active="active"><a href="#/watch/42">watch42</a></li>
-  <li ui-sref-active="active"><a href="#/watch/238">watch238</a></li>
-  <li ui-sref-active="active"><a href="#/watch/242">watch242</a></li>
-  <li ui-sref-active="active"><a href="#/watch/338">watch338</a></li>
-  <li ui-sref-active="active"><a href="#/watch/342">watch342</a></li>
+  <li ui-sref-active="active"><a href="#/iwatch">Назад</a></li>
+  <li ui-sref-active="active"><a href="#/iwatch/38">iWatch 38mm</a></li>
+  <li ui-sref-active="active"><a href="#/iwatch/42">iWatch 42mm</a></li>
+  <li ui-sref-active="active"><a href="#/iwatch/238">iWatch 2 38mm</a></li>
+  <li ui-sref-active="active"><a href="#/iwatch/242">iWatch 2 42mm</a></li>
+  <li ui-sref-active="active"><a href="#/iwatch/338">iWatch 3 38mm</a></li>
+  <li ui-sref-active="active"><a href="#/iwatch/342">iWatch 3 42mm</a></li>
 </ul>
 
 <h1>{{title}}</h1>
