--- a/public/templates/nav.html
+++ b/public/templates/nav.html
@@ -10,5 +10,5 @@
   <li ui-sref-active="active"><a ui-sref="macbook-air">Macbook Air</a></li>
   <li ui-sref-active="active"><a ui-sref="imac">iMac</a></li>
   <li ui-sref-active="active"><a ui-sref="macbook-simple">Macbook simple</a></li>
-  <li ui-sref-active="active"><a ui-sref="watch">Watch</a></li>
+  <li ui-sref-active="active"><a ui-sref="iwatch">iWatch</a></li>
 </ul>
