--- a/public/templates/macbook-pro-retina.html
+++ b/public/templates/macbook-pro-retina.html
@@ -3,10 +3,10 @@
   <li ui-sref-active="active"><a href="#/macbook-pro-retina/a1398">A1398</a></li>
   <li ui-sref-active="active"><a href="#/macbook-pro-retina/a1425">A1425</a></li>
   <li ui-sref-active="active"><a href="#/macbook-pro-retina/a1502">A1502</a></li>
-  <li ui-sref-active="active"><a href="#/macbook-pro/a1706">A1706</a></li>
-  <li ui-sref-active="active"><a href="#/macbook-pro/a1707">A1707</a></li>
-  <li ui-sref-active="active"><a href="#/macbook-pro/a1708">A1708</a></li>
-  <li ui-sref-active="active"><a href="#/macbook-pro/a1534">A1534</a></li>
+  <li ui-sref-active="active"><a href="#/macbook-pro-retina/a1706">A1706</a></li>
+  <li ui-sref-active="active"><a href="#/macbook-pro-retina/a1707">A1707</a></li>
+  <li ui-sref-active="active"><a href="#/macbook-pro-retina/a1708">A1708</a></li>
+  <li ui-sref-active="active"><a href="#/macbook-pro-retina/a1534">A1534</a></li>
 </ul>
 
 <h1>{{title}}</h1>
