update ipads links

--- a/public/templates/ipad-nav.html
+++ b/public/templates/ipad-nav.html
@@ -9,8 +9,8 @@
   <li ui-sref-active="active"><a href="#/ipad/air">ipad Air</a></li>
   <li ui-sref-active="active"><a href="#/ipad/air2">ipad Air 2</a></li>
   <li ui-sref-active="active"><a href="#/ipad/mini4">ipad Mini 4</a></li>
-  <li ui-sref-active="active"><a href="#/ipad/pro129">ipad Pro 12,9”</a></li>
-  <li ui-sref-active="active"><a href="#/ipad/pro97">ipad Pro 9,7”</a></li>
-  <li ui-sref-active="active"><a href="#/ipad/new2017">ipad new 2017”</a></li>
-  <li ui-sref-active="active"><a href="#/ipad/pro105">ipad 10,5 ”</a></li>
+  <li ui-sref-active="active"><a href="#/ipad/ipadpro129">ipad Pro 12,9”</a></li>
+  <li ui-sref-active="active"><a href="#/ipad/ipadpro97">ipad Pro 9,7”</a></li>
+  <li ui-sref-active="active"><a href="#/ipad/ipadnew2017">ipad new 2017”</a></li>
+  <li ui-sref-active="active"><a href="#/ipad/ipadpro105">ipad 10,5 ”</a></li>
 </ul>
